fix(프로그래머스): lv1 크레인 인형 뽑기
list.getLast() ->
list.get(list.size()-1)

list.removeLast()
->
list.remove(list.size()-1)

LinkedList
사용시 오류 제거 가능