@@ -1,12 +1,14 @@
 package level1;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class Algo29 {
     public int solution(int[][] board, int[] moves) {
         int answer = 0;
-        List<Integer> list = new ArrayList<>();
+//        List<Integer> list = new ArrayList<>();
+        LinkedList<Integer> list = new LinkedList<>();
         for (int i = 0; i < moves.length; i++){
             for (int j = 0; j < board.length; j++){
                 if (board[j][moves[i]-1] != 0){
@@ -14,10 +16,8 @@ public class Algo29 {
                         list.add(board[j][moves[i]-1]);
                         board[j][moves[i]-1] = 0;
                         break;
-//                    } else if (list.getLast() == board[j][moves[i]-1]) {
-                    } else if (list.get(list.size()-1) == board[j][moves[i]-1]) {
-//                        list.removeLast();
-                        list.remove(list.size()-1);
+                    } else if (list.getLast() == board[j][moves[i]-1]) {
+                        list.removeLast();
                         answer ++;
                         board[j][moves[i]-1] = 0;
                         break;
